// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessage render should disable "Verify message" button 1`] = `
<v-form>
  <v-textarea
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    classname="is-primary is-medium"
    disabled="true"
  >
    Verify message
  </v-button>
   
  <!---->
</v-form>
`;

exports[`VerifyMessage render should enable "Verify message" button 1`] = `
<v-form>
  <v-textarea
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    classname="is-primary is-medium"
  >
    Verify message
  </v-button>
   
  <!---->
</v-form>
`;

exports[`VerifyMessage render should render the initial state of the component 1`] = `
<v-form>
  <v-textarea
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    classname="is-primary is-medium"
    disabled="true"
  >
    Verify message
  </v-button>
   
  <!---->
</v-form>
`;

exports[`VerifyMessage render should show the received address 1`] = `
<v-form>
  <v-textarea
    label="Signature"
    v-model="signedMessageString"
  />
   
  <v-button
    classname="is-primary is-medium"
    disabled="true"
  >
    Verify message
  </v-button>
   
  <div
    class="field"
  >
    <label
      class="label"
    >
      Address
    </label>
     
    <p>
      address
    </p>
  </div>
</v-form>
`;
